WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86365
[GTK] [WK2] Memory leaks in WebKitWebSettings
https://bugs.webkit.org/show_bug.cgi?id=86365
Summary
[GTK] [WK2] Memory leaks in WebKitWebSettings
Sudarsana Nagineni (babu)
Reported
2012-05-14 05:58:02 PDT
Valgrind reports many memory leaks in WebKitWebSettings. I think we can fix these leaks by adopting an allocation using adoptWK. ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,464 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC1F0: WKPreferencesCopyFixedFontFamily (WKPreferences.cpp:208) ==27084== by 0x60E1E7F: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:925) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x40B020: main (main.c:209) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,465 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC28C: WKPreferencesCopySerifFontFamily (WKPreferences.cpp:218) ==27084== by 0x60E1F0A: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:928) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x40B020: main (main.c:209) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,466 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC328: WKPreferencesCopySansSerifFontFamily (WKPreferences.cpp:228) ==27084== by 0x60E1F95: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:931) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x40B020: main (main.c:209) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,467 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC3C4: WKPreferencesCopyCursiveFontFamily (WKPreferences.cpp:238) ==27084== by 0x60E2020: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:934) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x40B020: main (main.c:209) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,468 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC460: WKPreferencesCopyFantasyFontFamily (WKPreferences.cpp:248) ==27084== by 0x60E209C: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:937) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x40B020: main (main.c:209) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,469 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC4FC: WKPreferencesCopyPictographFontFamily (WKPreferences.cpp:258) ==27084== by 0x60E2118: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:940) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x40B020: main (main.c:209) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,470 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC6E4: WKPreferencesCopyDefaultTextEncodingName (WKPreferences.cpp:308) ==27084== by 0x60E2194: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:943) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x40B020: main (main.c:209) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,471 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x6082DFA: WebKit::WebString::createFromUTF8String(char const*) (WebString.h:60) ==27084== by 0x6082A2D: WKStringCreateWithUTF8CString (WKString.cpp:41) ==27084== by 0x60E3ED6: webkit_settings_set_serif_font_family (WebKitSettings.cpp:1514) ==27084== by 0x60E0609: webKitSettingsSetProperty(_GObject*, unsigned int, _GValue const*, _GParamSpec*) (WebKitSettings.cpp:162) ==27084== by 0xAF1722D: g_object_constructor (gobject.c:1352) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x40B020: main (main.c:209) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,472 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC154: WKPreferencesCopyStandardFontFamily (WKPreferences.cpp:198) ==27084== by 0x60E1DF4: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:922) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x60ECE02: webkitWebViewConstructed(_GObject*) (WebKitWebView.cpp:274) ==27084== by 0xAF18B82: g_object_newv (gobject.c:1741) ==27084== by 0xAF18EC5: g_object_new_valist (gobject.c:1830) ==27084== by 0xAF191D3: g_object_new (gobject.c:1545) ==27084== by 0x60EE76D: webkit_web_view_new_with_context (WebKitWebView.cpp:1094) ==27084== by 0x60EE6AD: webkit_web_view_new (WebKitWebView.cpp:1079) ==27084== by 0x40A8A2: createBrowserWindow (main.c:47) ==27084== by 0x40B0F6: main (main.c:229) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,473 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC1F0: WKPreferencesCopyFixedFontFamily (WKPreferences.cpp:208) ==27084== by 0x60E1E7F: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:925) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x60ECE02: webkitWebViewConstructed(_GObject*) (WebKitWebView.cpp:274) ==27084== by 0xAF18B82: g_object_newv (gobject.c:1741) ==27084== by 0xAF18EC5: g_object_new_valist (gobject.c:1830) ==27084== by 0xAF191D3: g_object_new (gobject.c:1545) ==27084== by 0x60EE76D: webkit_web_view_new_with_context (WebKitWebView.cpp:1094) ==27084== by 0x60EE6AD: webkit_web_view_new (WebKitWebView.cpp:1079) ==27084== by 0x40A8A2: createBrowserWindow (main.c:47) ==27084== by 0x40B0F6: main (main.c:229) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,474 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC28C: WKPreferencesCopySerifFontFamily (WKPreferences.cpp:218) ==27084== by 0x60E1F0A: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:928) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x60ECE02: webkitWebViewConstructed(_GObject*) (WebKitWebView.cpp:274) ==27084== by 0xAF18B82: g_object_newv (gobject.c:1741) ==27084== by 0xAF18EC5: g_object_new_valist (gobject.c:1830) ==27084== by 0xAF191D3: g_object_new (gobject.c:1545) ==27084== by 0x60EE76D: webkit_web_view_new_with_context (WebKitWebView.cpp:1094) ==27084== by 0x60EE6AD: webkit_web_view_new (WebKitWebView.cpp:1079) ==27084== by 0x40A8A2: createBrowserWindow (main.c:47) ==27084== by 0x40B0F6: main (main.c:229) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,475 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC328: WKPreferencesCopySansSerifFontFamily (WKPreferences.cpp:228) ==27084== by 0x60E1F95: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:931) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x60ECE02: webkitWebViewConstructed(_GObject*) (WebKitWebView.cpp:274) ==27084== by 0xAF18B82: g_object_newv (gobject.c:1741) ==27084== by 0xAF18EC5: g_object_new_valist (gobject.c:1830) ==27084== by 0xAF191D3: g_object_new (gobject.c:1545) ==27084== by 0x60EE76D: webkit_web_view_new_with_context (WebKitWebView.cpp:1094) ==27084== by 0x60EE6AD: webkit_web_view_new (WebKitWebView.cpp:1079) ==27084== by 0x40A8A2: createBrowserWindow (main.c:47) ==27084== by 0x40B0F6: main (main.c:229) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,476 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC3C4: WKPreferencesCopyCursiveFontFamily (WKPreferences.cpp:238) ==27084== by 0x60E2020: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:934) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x60ECE02: webkitWebViewConstructed(_GObject*) (WebKitWebView.cpp:274) ==27084== by 0xAF18B82: g_object_newv (gobject.c:1741) ==27084== by 0xAF18EC5: g_object_new_valist (gobject.c:1830) ==27084== by 0xAF191D3: g_object_new (gobject.c:1545) ==27084== by 0x60EE76D: webkit_web_view_new_with_context (WebKitWebView.cpp:1094) ==27084== by 0x60EE6AD: webkit_web_view_new (WebKitWebView.cpp:1079) ==27084== by 0x40A8A2: createBrowserWindow (main.c:47) ==27084== by 0x40B0F6: main (main.c:229) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,477 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC460: WKPreferencesCopyFantasyFontFamily (WKPreferences.cpp:248) ==27084== by 0x60E209C: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:937) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x60ECE02: webkitWebViewConstructed(_GObject*) (WebKitWebView.cpp:274) ==27084== by 0xAF18B82: g_object_newv (gobject.c:1741) ==27084== by 0xAF18EC5: g_object_new_valist (gobject.c:1830) ==27084== by 0xAF191D3: g_object_new (gobject.c:1545) ==27084== by 0x60EE76D: webkit_web_view_new_with_context (WebKitWebView.cpp:1094) ==27084== by 0x60EE6AD: webkit_web_view_new (WebKitWebView.cpp:1079) ==27084== by 0x40A8A2: createBrowserWindow (main.c:47) ==27084== by 0x40B0F6: main (main.c:229) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,478 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC4FC: WKPreferencesCopyPictographFontFamily (WKPreferences.cpp:258) ==27084== by 0x60E2118: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:940) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x60ECE02: webkitWebViewConstructed(_GObject*) (WebKitWebView.cpp:274) ==27084== by 0xAF18B82: g_object_newv (gobject.c:1741) ==27084== by 0xAF18EC5: g_object_new_valist (gobject.c:1830) ==27084== by 0xAF191D3: g_object_new (gobject.c:1545) ==27084== by 0x60EE76D: webkit_web_view_new_with_context (WebKitWebView.cpp:1094) ==27084== by 0x60EE6AD: webkit_web_view_new (WebKitWebView.cpp:1079) ==27084== by 0x40A8A2: createBrowserWindow (main.c:47) ==27084== by 0x40B0F6: main (main.c:229) ==27084== ==27084== 24 bytes in 1 blocks are definitely lost in loss record 2,479 of 7,584 ==27084== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==27084== by 0xC0CF4AA: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==27084== by 0x605BD16: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==27084== by 0x607CBB0: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==27084== by 0x607CC7E: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==27084== by 0x60CC6E4: WKPreferencesCopyDefaultTextEncodingName (WKPreferences.cpp:308) ==27084== by 0x60E2194: webkit_settings_init(_WebKitSettings*) (WebKitSettings.cpp:943) ==27084== by 0xAF32956: g_type_create_instance (gtype.c:1892) ==27084== by 0xAF170B8: g_object_constructor (gobject.c:1849) ==27084== by 0xAF186E3: g_object_newv (gobject.c:1713) ==27084== by 0xAF191EB: g_object_new (gobject.c:1542) ==27084== by 0x60E22D4: webkit_settings_new (WebKitSettings.cpp:963) ==27084== by 0x60ECE02: webkitWebViewConstructed(_GObject*) (WebKitWebView.cpp:274) ==27084== by 0xAF18B82: g_object_newv (gobject.c:1741) ==27084== by 0xAF18EC5: g_object_new_valist (gobject.c:1830) ==27084== by 0xAF191D3: g_object_new (gobject.c:1545) ==27084== by 0x60EE76D: webkit_web_view_new_with_context (WebKitWebView.cpp:1094) ==27084== by 0x60EE6AD: webkit_web_view_new (WebKitWebView.cpp:1079) ==27084== by 0x40A8A2: createBrowserWindow (main.c:47) ==27084== by 0x40B0F6: main (main.c:229) ==27084==
Attachments
Fix memory leaks
(4.28 KB, patch)
2012-05-14 06:27 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-05-14 06:27:20 PDT
Created
attachment 141715
[details]
Fix memory leaks
WebKit Review Bot
Comment 2
2012-05-14 06:29:05 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2012-05-14 06:52:55 PDT
Comment on
attachment 141715
[details]
Fix memory leaks Looks good to me, good catch!
Martin Robinson
Comment 4
2012-05-14 08:14:36 PDT
Comment on
attachment 141715
[details]
Fix memory leaks Great work.
Sudarsana Nagineni (babu)
Comment 5
2012-05-14 08:19:37 PDT
Thanks for your review Carlos and Martin.
WebKit Review Bot
Comment 6
2012-05-14 08:32:21 PDT
Comment on
attachment 141715
[details]
Fix memory leaks Clearing flags on attachment: 141715 Committed
r116950
: <
http://trac.webkit.org/changeset/116950
>
WebKit Review Bot
Comment 7
2012-05-14 08:32:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug