[GTK] [WK2] Memory leaks in WebKitWebSettings https://bugs.webkit.org/show_bug.cgi?id=86365

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-05-14
Reviewed by Martin Robinson.

Fix memory leaks in WebKitWebSettings by adopting allocations
using adoptWK.

* UIProcess/API/gtk/WebKitSettings.cpp:
(webkit_settings_init):
(webkit_settings_set_serif_font_family):

Canonical link: https://commits.webkit.org/103947@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116950 268f45cc-cd09-0410-ab3c-d52691b4dbfc